Update to Links Update to Website Tag

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<!-- saved from url=(0039)http://getbootstrap.com/examples/cover/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Preston's site">
     <meta name="author" content="Preston M.">
-    <link rel="icon" href="http://getbootstrap.com/favicon.ico">
+    <link rel="icon" href="imgs/Image-1.png">
 
     <title>Preston's Site</title>
 
@@ -41,8 +40,8 @@
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#">Features</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li><a href="#">D.O.T.A. II Strategy</a></li>
+                  <li><a href="#">About Me</a></li>
                 </ul>
               </nav>
             </div>
@@ -50,15 +49,15 @@
 
           <div class="inner cover">
             <h1 class="cover-heading">Preston's Website</h1>
-            <p class="lead">lorum ipsum</p>
+            <p class="lead">This site is the product of bootstrap and an awesome mind!</p>
             <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Learn more</a>
+              <a href="https://github.com/Prestonium/Prestonium.github.io" class="btn btn-lg btn-info" target="_blank">See source!</a>
             </p>
           </div>
 
           <div class="mastfoot">
             <div class="inner">
-              <p>this is the index.html</p>
+              <p>© Preston McInelly</p>
             </div>
           </div>
 
