--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#">D.O.T.A. II Strategy</a></li>
+                  <li><a href="dota2.html">D.O.T.A. II Strategy</a></li>
                   <li><a href="#">About Me</a></li>
                 </ul>
               </nav>
