--- a/dota2.html
+++ b/dota2.html
@@ -41,7 +41,7 @@
                 <ul class="nav masthead-nav">
                   <li><a href="index.html">Home</a></li>
                   <li class ="active"><a href="#">D.O.T.A. II Strategy</a></li>
-                  <li><a href="#">About Me</a></li>
+                  <li><a href="about.html">About</a></li>
                 </ul>
               </nav>
             </div>
