--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
 		<div class="row">
 			<div class="col-lg-4">
 				<img class="img-circle"
-					src="imgs/Pat.png"
+					src="imgs/prestonfa.png"
 					alt="Generic placeholder image"
 					style="width: 140px; height: 140px;">
 				<h2>Heading</h2>
