--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
 			<!-- /.col-lg-4 -->
 			<div class="col-lg-4">
 				<img class="img-circle"
-					src="imgs/tbob.png"
+					src="imgs/ral.jpg"
 					alt="Generic placeholder image"
 					style="width: 140px; height: 140px;">
 				<h2>Heading</h2>
