Deleted Dota 2 Strats Joke page, implementing MWCSC Team page in About. Changed Kyles Photo.

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 					<div id="navbar" class="navbar-collapse collapse">
 						<ul class="nav navbar-nav">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="dota2.html">D.O.T.A II</a></li>
+							<li><a href="ach.html">Achievements</a></li>
 							<li class="active"><a href="about.html">About</a></li>
 					</div>
 				</div>
@@ -86,11 +86,8 @@
 					src="imgs/prestonfa.png"
 					alt="Generic placeholder image"
 					style="width: 140px; height: 140px;">
-				<h2>Heading</h2>
-				<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis
-					euismod. Nullam id dolor id nibh ultricies vehicula ut id elit.
-					Morbi leo risus, porta ac consectetur ac, vestibulum at eros.
-					Praesent commodo cursus magna.</p>
+				<h2>Profile Generation</h2>
+				<p>Using both Custom and Public programs I am able to produce Art that uses unique and generic templates. This Process while Generic allows the production of graphics that have been used in several Projects built by MWCSC.</p>
 				
 			</div>
 			<!-- /.col-lg-4 -->
@@ -99,11 +96,8 @@
 					src="imgs/ral.jpg"
 					alt="Generic placeholder image"
 					style="width: 140px; height: 140px;">
-				<h2>Heading</h2>
-				<p>Duis mollis, est non commodo luctus, nisi erat porttitor
-					ligula, eget lacinia odio sem nec elit. Cras mattis consectetur
-					purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo,
-					tortor mauris condimentum nibh.</p>
+				<h2>Avatar Generation</h2>
+				<p>This Image is not mine, it is from a challenge between myself and another member of MWCSC. Obviously my avatar is superior to any other in existance, but yea, it really has no purpose on here.</p>
 				
 			</div>
 			<!-- /.col-lg-4 -->
@@ -131,18 +125,14 @@
 		<div class="row featurette">
 			<div class="col-md-7">
 				<h2 class="featurette-heading">
-					First featurette heading. <span class="text-muted">It'll
-						blow your mind.</span>
+					Kyle Surowiec :<span class="text-muted">Trap Lord Kyle</span>
 				</h2>
-				<p class="lead">Donec ullamcorper nulla non metus auctor
-					fringilla. Vestibulum id ligula porta felis euismod semper.
-					Praesent commodo cursus magna, vel scelerisque nisl consectetur.
-					Fusce dapibus, tellus ac cursus commodo.</p>
+				<p class="lead">Kyle Surowiec is one of three Co-Presidents from MWCSC. He specializes in</p>
 			</div>
 			<div class="col-md-5">
 				<img class="featurette-image img-responsive"
 					data-src="holder.js/500x500/auto" alt="500x500"
-					src="imgs/Pat.png"
+					src="imgs/kyle.png"
 					data-holder-rendered="true">
 			</div>
 		</div>
@@ -158,8 +148,7 @@
 			</div>
 			<div class="col-md-7">
 				<h2 class="featurette-heading">
-					Oh yeah, it's that good. <span class="text-muted">See for
-						yourself.</span>
+					Declan Johnson :<span class="text-muted"><a href= "http://spyroo.github.io" target = "blank_">spyroo</a></span>
 				</h2>
 				<p class="lead">Donec ullamcorper nulla non metus auctor
 					fringilla. Vestibulum id ligula porta felis euismod semper.
