--- a/about.html
+++ b/about.html
@@ -112,7 +112,8 @@
 				<p>I am an insane fan of 8bit art and love creating my own, the
 					8-bit art you see on this site is was created in Photoshop by
 					Preston McInelly (ME). If you ever need any assistance in the
-					creation of such art for a project feel free to shoot me and email! (preston.w.mcinelly@gmail.com)</p>
+					creation of such art for a project feel free to shoot me and email!
+					(preston.w.mcinelly@gmail.com)</p>
 			</div>
 			<!-- /.col-lg-4 -->
 		</div>
@@ -130,7 +131,8 @@
 				</h2>
 				<p class="lead">Kyle Surowiec the first of three Co-Presidents
 					from MWCSC. He specializes in concept design and is a skilled
-					programmer. Kyle is an avid gamer and loves his LOL account.</p>
+					programmer. Kyle is an avid gamer and loves his LOL account. Kyle
+					loves to work and is a valued Dairy Queen Employee.</p>
 			</div>
 			<div class="col-md-5">
 				<img class="featurette-image img-responsive"
@@ -182,6 +184,23 @@
 		</div>
 
 		<hr class="featurette-divider">
+
+		<div class="row featurette">
+			<div class="col-md-5">
+				<img class="featurette-image img-responsive"
+					data-src="holder.js/500x500/auto" alt="500x500"
+					src="imgs/Tanner.jpg" data-holder-rendered="true">
+			</div>
+			<div class="col-md-7">
+				<h2 class="featurette-heading">
+					Tanner Marino :<span class="text-muted">Life Cafè Supervisor</span>
+				</h2>
+				<p class="lead">Tanner, while new to the team, is a mixture of
+					enthusiasm, luck, and skill. Tanner is the final member of JK and a
+					Senior in MWCSC. He is a talented student and hard worker.</p>
+			</div>
+		</div>
+
 
 		<!-- /END THE FEATURETTES -->
 
