--- a/ach.html
+++ b/ach.html
@@ -63,18 +63,13 @@
 	<!-- Marketing messaging and featurettes
     ================================================== -->
 	<!-- Wrap the rest of the page in another container to center all the content. -->
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
 	<div class="container marketing">
 		<!-- START THE FEATURETTES -->
-		<hr class="featurette-divider">
+		<br>
+		<br>
+		<br>
+		<br>
+		
 
 		<div class="row featurette">
 			<div class="col-md-5">
@@ -84,7 +79,7 @@
 			</div>
 			<div class="col-md-7">
 				<h2 class="featurette-heading">
-					UNO Quiz Bowl 2014:<span class="text-muted"> Yet to occur</span>
+					UNO Quiz Bowl 2014: <span class="text-muted">Yet to occur</span>
 				</h2>
 				<p class="lead">
 					Lorum Ipsum
@@ -95,7 +90,7 @@
 		<div class="row featurette">
 			<div class="col-md-7">
 				<h2 class="featurette-heading">
-					Nullify CTF 2014<span class="text-muted">Second Place!</span>
+					Nullify CTF 2014: <span class="text-muted">Second Place!</span>
 				</h2>
 				<p class="lead">Lorum Ipsum</p>
 			</div>
