Massive update, Ach updated, about updated, images imported, what didnt i do?

--- a/about.html
+++ b/about.html
@@ -110,10 +110,10 @@
 					style="width: 140px; height: 140px;">
 				<h2>8-Bit Art</h2>
 				<p>I am an insane fan of 8bit art and love creating my own, the
-					8-bit art you see on this site is was created in Photoshop by
-					Preston McInelly (ME). If you ever need any assistance in the
-					creation of such art for a project feel free to shoot me and email!
-					(preston.w.mcinelly@gmail.com)</p>
+					8-bit art you see on this site is was created in Photoshop and/or
+					Paint.net by Preston McInelly (ME). If you ever need any assistance
+					in the creation of such art for a project feel free to shoot me and
+					email! (preston.w.mcinelly@gmail.com)</p>
 			</div>
 			<!-- /.col-lg-4 -->
 		</div>
@@ -123,6 +123,12 @@
 		<!-- START THE FEATURETTES -->
 
 		<hr class="featurette-divider">
+		<center>
+			<h2 class="featurette-heading">Meet Team JK from Millard West
+				Computer Science Club!</h2>
+		</center>
+		<hr class="featurette-divider">
+
 
 		<div class="row featurette">
 			<div class="col-md-7">
@@ -212,7 +218,6 @@
 			</p>
 			<p>© Preston McInelly</p>
 		</footer>
-
 	</div>
 	<!-- /.container -->
 
