--- a/ach.html
+++ b/ach.html
@@ -65,58 +65,121 @@
 	<!-- Wrap the rest of the page in another container to center all the content. -->
 	<div class="container marketing">
 		<!-- START THE FEATURETTES -->
-		<br>
-		<br>
-		<br>
-		<br>
-		
+		<h2 class="featurette-heading">
+			<p class="text-center">Achievements!</p>
+		</h2>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="thumbnail">
+						<img src="imgs/chart.jpeg" alt="...">
+						<div class="caption">
+							<h2>
+								<p class="text-center">2014 Nullify CTF: Return of the H4ck</p>
+							</h2>
+							<p>At the Return Of The H4ck Team JK took 2nd place!</p>
+							<p class="text-center">
+								<a href="http://www.nullify-ctf.com/team3.html" target="_blank"
+									class="btn btn-success" role="button">View Site</a>
+							</p>
+						</div>
+					</div>
 
-		<div class="row featurette">
-			<div class="col-md-5">
-				<img class="featurette-image img-responsive"
-					data-src="holder.js/500x500/auto" alt="500x500"
-					src="imgs/Declan.png" data-holder-rendered="true">
+				</div>
+
+				<div class="col-md-4">
+					<div class="thumbnail">
+						<img src="imgs/download.jpg" alt="...">
+						<div class="caption">
+							<h2>
+								<p class="text-center">2014 UNO Quiz Bowl</p>
+							</h2>
+							<p>UNO's 2014 Quizbowl has yet to take place, it will do so
+								on 12/5/2014</p>
+							<p class="text-center">
+								<a
+									href="http://www.unomaha.edu/college-of-information-science-and-technology/computer-science/community-engagement/cs-education-week.php"
+									target="_blank" class="btn btn-info" role="button">View
+									Site</a>
+							</p>
+						</div>
+					</div>
+
+				</div>
+				<div class="col-md-4">
+					<div class="thumbnail">
+						<img src="imgs/579224_111375179027074_1547946929_n.png" alt="...">
+						<div class="caption">
+							<h2>
+								<p class="text-center">2013 Nullify CTF</p>
+							</h2>
+							<br>
+							<p>At the first Nullify CTF myself and one other Senior at
+								the time, we took fourth place overall. Unfortunately Nullifys
+								year one competition was lost so I have no link to their page.</p>
+							<p class="text-center">
+								<a href="#" class="btn btn-danger" role="button">View Site</a>
+							</p>
+						</div>
+					</div>
+				</div>
 			</div>
-			<div class="col-md-7">
-				<h2 class="featurette-heading">
-					UNO Quiz Bowl 2014: <span class="text-muted">Yet to occur</span>
-				</h2>
-				<p class="lead">
-					Lorum Ipsum
+			<div class="row">
+				<div class="col-md-4">
+					<div class="thumbnail">
+						<img src="imgs/download.jpg" alt="...">
+						<div class="caption">
+							<h2>
+								<p class="text-center">2013 UNO Programming Competition</p>
+							</h2>
+							<p>At UNO's programming competition in 2013 we took 4th
+								overall out of twelve.</p>
+							<p class="text-center">
+								<a href="http://www.nullify-ctf.com/team3.html" target="_blank"
+									class="btn btn-success" role="button">View Site</a>
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="thumbnail">
+						<img src="imgs/download.jpg" alt="...">
+						<div class="caption">
+							<h2>
+								<p class="text-center">2013 UNO Quiz Bowl</p>
+							</h2>
+							<br>
+							<p>At UNO's 2013 Quiz Bowl EZ011011, Millard West's CPU Sci.
+								Team, placed Sixth out of twelve.</p>
+							<p class="text-center">
+								<a href="https://www.ist.unomaha.edu/csbowl2013" target="_blank"
+									class="btn btn-success" role="button">View Site</a>
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="thumbnail">
+						<img src="imgs/unlathletics.gif" alt="...">
+						<div class="caption">
+							<h2>
+								<p class="text-center">2013 UNL Programming Competition</p>
+							</h2>
+							<br>
+							<p>At UNL's Programming Competition EZ011011 came in fourth
+								out of seven.</p>
+							<p class="text-center">
+								<a
+									href="http://acm.unl.edu/ncna-regional-programming-contest"
+									target="_blank" class="btn btn-success" role="button">View
+									Site</a>
+							</p>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
-		<hr class="featurette-divider">
 
-		<div class="row featurette">
-			<div class="col-md-7">
-				<h2 class="featurette-heading">
-					Nullify CTF 2014: <span class="text-muted">Second Place!</span>
-				</h2>
-				<p class="lead">Lorum Ipsum</p>
-			</div>
-			<div class="col-md-5">
-				<img class="featurette-image img-responsive"
-					data-src="holder.js/500x500/auto" alt="500x500" src="imgs/kyle.png"
-					data-holder-rendered="true">
-			</div>
-		</div>
-
-		<hr class="featurette-divider">
-
-		<div class="row featurette">
-			<div class="col-md-5">
-				<img class="featurette-image img-responsive"
-					data-src="holder.js/500x500/auto" alt="500x500"
-					src="imgs/Declan.png" data-holder-rendered="true">
-			</div>
-			<div class="col-md-7">
-				<h2 class="featurette-heading">
-					UNO Quiz Bowl 2014:<span class="text-muted"> Yet to occur</span>
-				</h2>
-				<p class="lead">
-					Place Holder
-			</div>
-		</div>
 
 		<hr class="featurette-divider">
 
