--- a/index.html
+++ b/index.html
@@ -42,36 +42,50 @@
 
 			<div class="cover-container">
 				<div class="inner">
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle collapsed"
+							data-toggle="collapse"
+							data-target="#bs-example-navbar-collapse-1">
+							<span class="sr-only">Toggle navigation</span> <span
+								class="icon-bar"></span> <span class="icon-bar"></span> <span
+								class="icon-bar"></span>
+						</button>
+					</div>
+					<div class="collapse navbar-collapse"
+						id="bs-example-navbar-collapse-1">
+						<nav
+							class="navbar navbar-masthead navbar-inverse navbar-fixed-top"
+							role="navigation">
 
-					<nav class="navbar navbar-masthead navbar-inverse navbar-fixed-top"
-						role="navigation">
+							<ul class="nav navbar-nav">
+								<li class="navitem"><a class='me'>About me</a></li>
+								<li class="navitem"><a class='team'>Team JK</a></li>
+								<li class="navitem"><a class='ach'>Achievements</a></li>
+							</ul>
+							<ul class="nav navbar-nav navbar-right">
+								<li><a class="scrollToTop"><button type="button"
+											class="btn btn-default">Return to Top</button></a></li>
+							</ul>
+						</nav>
+					</div>
 
-						<ul class="nav navbar-nav">
-							<li><a href="#me">About me</a></li>
-							<li><a href="#team">Team JK</a></li>
-							<li><a href="#ach">Achievements</a></li>
-						</ul>
-						<ul class="nav navbar-nav navbar-right">
-							<li><a class="scrollToTop">Return to Top </a></li>
-						</ul>
-					</nav>
 				</div>
-			</div>
-			<br> <br> <br>
-			<div class="inner cover">
-				<h1 class="cover-heading">Preston McInelly's Website</h1>
-				<p class="lead">Description of activities i do!</p>
-			</div>
 
-			<div class="mastfoot"></div>
+				<br> <br> <br>
+				<div class="inner cover">
+					<h1 class="cover-heading">Preston McInelly's Website</h1>
+					<p class="lead">Description of activities I do!</p>
+				</div>
+
+				<div class="mastfoot"></div>
+
+			</div>
 
 		</div>
 
 	</div>
+
 	<div id="me"></div>
-	</div>
-
-
 	<!-- About part -->
 	<center>
 		<h2 class="featurette-heading">About Me</h2>
@@ -210,12 +224,7 @@
 		<!-- Marketing messaging and featurettes
     ================================================== -->
 		<!-- Wrap the rest of the page in another container to center all the content. -->
-		<br>
-		<p class="pull-right">
-			<a class="scrollToTop"><button type="button" class="btn btn-info"
-					id="scrolltotop">Return to Top</button></a>
-		</p>
-		<br> <br>
+		<br> <br> <br>
 		<div class="container marketing">
 			<!-- START THE FEATURETTES -->
 			<hr class="featurette-divider">
@@ -343,11 +352,7 @@
 		<!-- FOOTER -->
 		<hr class="featurette-divider">
 		<footer>
-			<p class="pull-right">
-				<a class="scrollToTop"><button type="button"
-						class="btn btn-info" id="scrolltotop">Return to Top</button></a>
-			</p>
-			<br> <br>
+			<br>
 			<p>© Preston McInelly</p>
 		</footer>
 
