--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						id="bs-example-navbar-collapse-1">
 						<nav
 							class="navbar navbar-masthead navbar-inverse navbar-fixed-top"
-							role="navigation">
+							role="tablist">
 
 							<ul class="nav navbar-nav">
 								<li class="navitem"><a class='me'>About me</a></li>
@@ -64,7 +64,7 @@
 							</ul>
 							<ul class="nav navbar-nav navbar-right">
 								<li><a class="scrollToTop"><button type="button"
-											class="btn btn-default">Return to Top</button></a></li>
+											class="btn btn-danger">Return to Top</button></a></li>
 							</ul>
 						</nav>
 					</div>
