--- a/index.html
+++ b/index.html
@@ -1,369 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Preston's site">
-<meta name="author" content="Preston M.">
-<link rel="icon" href="imgs/Image-1.png">
-
-<title>Preston's Site</title>
-
-<!-- Bootstrap core CSS -->
-<link href="http://getbootstrap.com/dist/css/bootstrap.min.css"
-	rel="stylesheet">
-
-<!-- Custom styles for this template -->
-<link href="http://getbootstrap.com/examples/cover/cover.css"
-	rel="stylesheet">
-
-<!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-<!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<style type="text/css"></style>
-
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-<link href="dist/css/custom.css" rel="stylesheet">
-<script src="dist/js/customjavascript.js"></script>
-</head>
-
-<body data-spy="scroll" data-target=".inner">
-	<div class="site-wrapper">
-
-		<div class="site-wrapper-inner">
-
-			<div class="cover-container">
-				<div class="inner">
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle collapsed"
-							data-toggle="collapse"
-							data-target="#bs-example-navbar-collapse-1">
-							<span class="sr-only">Toggle navigation</span> <span
-								class="icon-bar"></span> <span class="icon-bar"></span> <span
-								class="icon-bar"></span>
-						</button>
-					</div>
-					<div class="collapse navbar-collapse"
-						id="bs-example-navbar-collapse-1">
-						<nav
-							class="navbar navbar-masthead navbar-inverse navbar-fixed-top"
-							role="tablist">
-
-							<ul class="nav navbar-nav">
-								<li class="navitem"><a class='me'>About me</a></li>
-								<li class="navitem"><a class='team'>Team JK</a></li>
-								<li class="navitem"><a class='ach'>Achievements</a></li>
-							</ul>
-							<ul class="nav navbar-nav navbar-right">
-								<li><a class="scrollToTop"><button type="button"
-											class="btn btn-danger">Return to Top</button></a></li>
-							</ul>
-						</nav>
-					</div>
-
-				</div>
-
-				<br> <br> <br>
-				<div class="inner cover">
-					<h1 class="cover-heading">Preston McInelly's Website</h1>
-					<p class="lead">Description of activities I do!</p>
-				</div>
-
-				<div class="mastfoot"></div>
-
-			</div>
-
-		</div>
-
-	</div>
-
-	<div id="me"></div>
-	<!-- About part -->
-	<center>
-		<h2 class="featurette-heading">About Me</h2>
-	</center>
-	<hr class="featurette-divider">
-	<br>
-	<br>
-	<br>
-	<!-- Three columns of text below the carousel -->
-	<div class="row">
-		<div class="col-lg-4">
-			<img class="img-circle" src="imgs/prestonfa.png"
-				alt="Generic placeholder image" style="width: 140px; height: 140px;">
-			<h2>Profile Generation</h2>
-			<p>Using both Custom and Public programs I am able to produce Art
-				that uses unique and generic templates. This Process while Generic
-				allows the production of graphics that have been used in several
-				Projects built by MWCSC.</p>
-
-		</div>
-		<!-- /.col-lg-4 -->
-		<div class="col-lg-4">
-			<img class="img-circle" src="imgs/ral.jpg"
-				alt="Generic placeholder image" style="width: 140px; height: 140px;">
-			<h2>Avatar Generation</h2>
-			<p>This Image is not mine, it is from a challenge between myself
-				and another member of MWCSC. Obviously my avatar is superior to any
-				other in existance, but yea, it really has no purpose on here.</p>
-
-		</div>
-		<!-- /.col-lg-4 -->
-		<div class="col-lg-4">
-			<img class="img-circle" src="imgs/Image-1.png"
-				alt="Generic placeholder image" style="width: 140px; height: 140px;">
-			<h2>8-Bit Art</h2>
-			<p>I am an insane fan of 8bit art and love creating my own, the
-				8-bit art you see on this site is was created in Photoshop and/or
-				Paint.net by Preston McInelly (ME). If you ever need any assistance
-				in the creation of such art for a project feel free to shoot me and
-				email! (preston.w.mcinelly@gmail.com)</p>
-		</div>
-		<!-- /.col-lg-4 -->
-	</div>
-	<!-- /.row -->
-	<br>
-
-	<br>
-	<br>
-	<div class="container marketing">
-
-
-
-		<!-- START THE FEATURETTES -->
-
-		<hr class="featurette-divider">
-		<div id="team"></div>
-		<center>
-			<h2 class="featurette-heading">Meet Team JK from Millard West
-				Computer Science Club!</h2>
-		</center>
-		<hr class="featurette-divider">
-
-
-		<div class="row featurette">
-			<div class="col-md-7">
-				<h2 class="featurette-heading">
-					Kyle Surowiec :<span class="text-muted">Trap Lord Kyle</span>
-				</h2>
-				<p class="lead">Kyle Surowiec the first of three Co-Presidents
-					from MWCSC. He specializes in concept design and is a skilled
-					programmer. Kyle is an avid gamer and loves his LOL account. Kyle
-					loves to work and is a valued Dairy Queen Employee.</p>
-			</div>
-			<div class="col-md-5">
-				<img class="featurette-image img-responsive" alt="500x500"
-					src="imgs/kyle.png" data-holder-rendered="true">
-			</div>
-		</div>
-
-		<hr class="featurette-divider">
-
-		<div class="row featurette">
-			<div class="col-md-5">
-				<img class="featurette-image img-responsive" alt="500x500"
-					src="imgs/Declan.png" data-holder-rendered="true">
-			</div>
-			<div class="col-md-7">
-				<h2 class="featurette-heading">
-					Declan Johnson :<span class="text-muted">spyroo</span>
-				</h2>
-				<p class="lead">
-					Declan Johnson is the second of three Co-Presidents from MWCSC. He
-					his the lead programmer in our IT Innovation Cup. Declan has years
-					of programming experience and is Awesome at what he does. Declan
-					has created many works, <a href="https://github.com/spyroo"
-						target="_blank">his Github page</a> contains many such works.
-			</div>
-		</div>
-
-		<hr class="featurette-divider">
-
-		<div class="row featurette">
-			<div class="col-md-7">
-				<h2 class="featurette-heading">
-					Preston McInelly (ME) :<br> <span class="text-muted">Rabbit
-						of Caerbannog</span>
-				</h2>
-				<p class="lead">So this is the section where I talk about me...
-					I am an experienced programmer, I know Java, Python, and Ruby. I
-					know several scripts including Html, CSS, and JS. I generaly create
-					graphics and do the presentations for MWCSC. Im also the Third
-					Co-President of MWCSC.</p>
-			</div>
-			<div class="col-md-5">
-				<img class="featurette-image img-responsive" href="imgs/Image-1.png"
-					alt="500x500" src="imgs/Image-1.png" data-holder-rendered="true">
-			</div>
-		</div>
-
-		<hr class="featurette-divider">
-
-		<div class="row featurette">
-			<div class="col-md-5">
-				<img class="featurette-image img-responsive" alt="500x500"
-					src="imgs/Tanner.jpg" data-holder-rendered="true">
-			</div>
-			<div class="col-md-7">
-				<h2 class="featurette-heading">
-					Tanner Marino :<span class="text-muted">Life Cafè Supervisor</span>
-				</h2>
-				<p class="lead">Tanner, while new to the team, is a mixture of
-					enthusiasm, luck, and skill. Tanner is the final member of JK and a
-					Senior in MWCSC. He is a talented student and hard worker.</p>
-			</div>
-		</div>
-		<!-- Marketing messaging and featurettes
-    ================================================== -->
-		<!-- Wrap the rest of the page in another container to center all the content. -->
-		<br> <br> <br>
-		<div class="container marketing">
-			<!-- START THE FEATURETTES -->
-			<hr class="featurette-divider">
-			<div id="ach"></div>
-			<center>
-				<h2 class="featurette-heading">My Scholastic Achievements</h2>
-			</center>
-			<hr class="featurette-divider">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-4">
-						<div class="thumbnail">
-							<img src="imgs/chart.jpeg" alt="...">
-							<div class="caption">
-								<h2>
-									<p class="text-center">2014 Nullify CTF: Return of the H4ck</p>
-								</h2>
-								<p>At the Return Of The H4ck Team JK took 2nd place!</p>
-								<p class="text-center">
-									<a href="http://www.nullify-ctf.com/team3.html" target="_blank"
-										class="btn btn-success" role="button">View Site</a>
-								</p>
-							</div>
-						</div>
-
-					</div>
-
-					<div class="col-md-4">
-						<div class="thumbnail">
-							<img src="imgs/download.jpg" alt="...">
-							<div class="caption">
-								<h2>
-									<p class="text-center">2014 UNO Quiz Bowl</p>
-								</h2>
-								<p>UNO's 2014 Quizbowl has yet to take place, it will do so
-									on 12/5/2014</p>
-								<p class="text-center">
-									<a
-										href="http://www.unomaha.edu/college-of-information-science-and-technology/computer-science/community-engagement/cs-education-week.php"
-										target="_blank" class="btn btn-info" role="button">View
-										Site</a>
-								</p>
-							</div>
-						</div>
-
-					</div>
-					<div class="col-md-4">
-						<div class="thumbnail">
-							<img src="imgs/579224_111375179027074_1547946929_n.png" alt="...">
-							<div class="caption">
-								<h2>
-									<p class="text-center">2013 Nullify CTF</p>
-								</h2>
-								<br>
-								<p>At the first Nullify CTF myself and one other Senior at
-									the time, we took fourth place overall. Unfortunately Nullifys
-									year one competition was lost so I have no link to their page.</p>
-								<p class="text-center">
-									<a href="#" class="btn btn-danger" role="button">View Site</a>
-								</p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-4">
-						<div class="thumbnail">
-							<img src="imgs/download.jpg" alt="...">
-							<div class="caption">
-								<h2>
-									<p class="text-center">2013 UNO Programming Competition</p>
-								</h2>
-								<p>At UNO's programming competition in 2013 we took 4th
-									overall out of twelve.</p>
-								<p class="text-center">
-									<a href="http://www.nullify-ctf.com/team3.html" target="_blank"
-										class="btn btn-success" role="button">View Site</a>
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="thumbnail">
-							<img src="imgs/download.jpg" alt="...">
-							<div class="caption">
-								<h2>
-									<p class="text-center">2013 UNO Quiz Bowl</p>
-								</h2>
-								<br>
-								<p>At UNO's 2013 Quiz Bowl EZ011011, Millard West's CPU Sci.
-									Team, placed Sixth out of twelve.</p>
-								<p class="text-center">
-									<a href="https://www.ist.unomaha.edu/csbowl2013"
-										target="_blank" class="btn btn-success" role="button">View
-										Site</a>
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="thumbnail">
-							<img src="imgs/unlathletics.gif" alt="...">
-							<div class="caption">
-								<h2>
-									<p class="text-center">2013 UNL Programming Competition</p>
-								</h2>
-								<br>
-								<p>At UNL's Programming Competition EZ011011 came in fourth
-									out of seven.</p>
-								<p class="text-center">
-									<a href="http://acm.unl.edu/ncna-regional-programming-contest"
-										target="_blank" class="btn btn-success" role="button">View
-										Site</a>
-								</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-		</div>
-		<!-- /END THE FEATURETTES -->
-		<br> <br>
-
-		<!-- FOOTER -->
-		<hr class="featurette-divider">
-		<footer>
-			<br>
-			<p>© Preston McInelly</p>
-		</footer>
-
-	</div>
-	<!-- /.container -->
-
-	<script src="dist/css/bootstrap.min.css"></script>
-	<script src="http://getbootstrap.com/assets/js/docs.min.js"></script>
-
-
-	<!-- Bootstrap core JavaScript
-    ================================================== -->
-</body>
-</html>
+Currently Under Construction
